# trmnl-firmware

./: .clang-format  .clang-format-ignore  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  dependencies.lock.esp32c3  dependencies.lock.esp32s3  format.sh  frame_partitions.csv  platformio.ini  sdkconfig.TRMNL_X  sdkconfig.TRMNL_X.old  sdkconfig.TRMNL_X_E1003  sdkconfig.TRMNL_X_EPDIY  sdkconfig.TRMNL_X_EPDIY.old  sdkconfig.TRMNL_X_PAPERS3  sdkconfig.TRMNL_X_SENSORIAC5  sdkconfig.TRMNL_X_SENSORIAC5.old  sdkconfig.TRMNL_X_dev_no_qa  sdkconfig.defaults  sdkconfig.defaults.TRMNL_X  sdkconfig.defaults.TRMNL_X_E1003  sdkconfig.defaults.TRMNL_X_EPDIY  sdkconfig.defaults.TRMNL_X_LILYGO_T5PRO  sdkconfig.defaults.TRMNL_X_PAPERS3  sdkconfig.defaults.TRMNL_X_SENSORIAC5  sdkconfig.defaults.TRMNL_X_SENSORIAS3  sdkconfig.defaults.TRMNL_X_dev  sdkconfig.defaults.TRMNL_X_dev_no_qa  sdkconfig.trmnl_v2
.github/: dependabot.yml
boards/: esp32c5_n16r8.json  lilygo_t5s3_pro.json
docs/: middle-tap-3s-tasks-review.md  middle-tap-3s-tasks.md
include/: Inter_18.h  bl.h  button.h  buzzer.h  config.h  device_id.h  display.h  filesystem.h  firmware_update.h  lang_strings.h  nicoclean_8.h  power.h  preferences_persistence.h  qa.h  sht4x_read.h  touchbar_actions.h  types.h  webp_decode.h  wifi_network.h
scripts/: copy_to_core.sh  esptool_server.py  flash_app.sh  flash_merged.sh  flatten_config.py  format.sh  git_version.py  http_proxy.py  merge_firmware.sh  post_build_seeed.py  post_build_x.py  prepare_release.sh
sdkconfigs/: sdkconfig.TRMNL_X  sdkconfig.TRMNL_X_E1003  sdkconfig.TRMNL_X_PAPERS3  sdkconfig.TRMNL_X_SENSORIAC5  sdkconfig.TRMNL_X_SENSORIAS3  sdkconfig.TRMNL_X_dev  sdkconfig.defaults  sdkconfig.frame  (+1 more)
(+232 files in other folders)
